moderation of comments, spam check by akismet

--- a/public/comments/comments.css
+++ b/public/comments/comments.css
@@ -283,3 +283,13 @@
     background-color: rgb(255, 145, 0);
   }
 }
+
+#kucos-root .comment.spam {
+  opacity: 0.4;
+  margin-left: 1px;
+}
+
+#kucos-root .dnone {
+  display: none;
+}
+
