small styles changes

--- a/public/comments/comments.css
+++ b/public/comments/comments.css
@@ -204,7 +204,7 @@
 }
 
 #kucos-root code {
-  background: #f4f4f4;
+  background: #eee;
   color: #666;
   font-family: monospace;
   /*border: 1px solid #ddd;
